--- a/13/public/index.html
+++ b/13/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高一三班 - 我们的班级网站</title>
